# auto-optional

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  DEPLOYMENT.md  LICENSE  README.md  index.html  mkdocs.yml  mypy.ini  package.json  pyproject.toml  requirements-docs.txt  requirements.txt  sitemap.xml  tasks.py  vercel.json
.github/workflows/: cd.yml  ci.yml
docs/: CNAME  index.md
docs/stylesheets/: extra-style.css
overrides/: main.html
search/: search_index.json
src/auto_optional/: __main__.py  code_processing.py  convert.py  cst_helper.py  data_structures.py  file_handling.py  main.py
stylesheets/: extra-style.css
test/: simple-tests.yaml  test_all.py
