[tool.poetry]
name = "auto-optional"
version = "0.1.0"
description = "Makes typed arguments Optional when the default argument is None"
authors = ["Luttik <dtluttik@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.7"
libcst = "^0.3.20"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
